optimization and statistics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "categoryname",
         "customizerform",
         "pokeball",
+        "pokedex",
         "trainercard"
     ],
     "editor.fontSize": 14
